-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.835 2010-12-14 08:34:59 guru Exp $
-----------------------------------------------------------------------------------------

2010-12-13	pwessel
	* splitxyz.c:		Did not list -Q in synopsis.
	* surface.c:		Bug if using seconds (c) in search radius (got minutes).
	* *.txt:		Fixed typos in several man pages.

2010-12-13	jluis
	* ps2raster.c		For some reason -W was not forcing -A. Now it does it again  

2010-12-11	pwessel
	* pslegend.c:		One more place to use original -R -J (see 2010-11-18 fix).
	* gmt_map.c:		For van Grinten: errors in left/right_circle
	* gmt_plot.c:		A colored TICK_PEN would also color annotations.

2010-12-05	pwessel
	* spotter/grdrotater.c:	Did not handle the rotation of an entire global grid since
				the polygon outline interfered with the domain.

2010-12-02	pwessel
	* x2sys/x2sys.c:	Minor bug in x2sys binary reading of floats.

2010-11-30	pwessel
	* xyz2grd.c:		Do not tolerate NaNs in x,y and give error (e.g., if junk is given).

2010-11-23	pwessel
	* grdmask.c:		Must skip "polygons" with less than 3 points.  Also, the
				resampling distance for spherical data was wrong, now 0.1 degrees.
	* misc/gmt2kml.c:	Options -N+ and -D would crash under Windows (usual DLL hell).

2010-11-19	pwessel
	* grd2xyz.c:		Extended -Ef mode to write floats (patch by Pierre Cazenave).
	* gmtselect.c:		Due to resampling of parallels in -N, some points exactly on
				a coast bin parallel could fail the test due to roundoff.
				Fixed by not resampling coastlines since it is a Cartesian test.
	* grdlandmask.c:	Same.
				
2010-11-18	pwessel
	* gmt_io.c:		When ASCII mode, also need to save/restore any netcdf i/o settings.
	* gmt_map.c:		We have a safety valve for preventing a painful slow search
				around the map perimeter.  The search is appropriate for maps
				but not for mapproject results.  The limit was for 200 inch